# city-explorer-agent

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  run_api_server.py  run_city_explorer.py
.github/workflows/: pages.yml
data/: sample_poi_moscow.json
docs/: deployment.md  governance.md  index.html  product-proposal.md  system-design.md
docs/demo/: berlin-live.html  index.html  playground.css  playground.html  playground.js  ulan-ude.html  viewer.css  viewer.js
docs/demo/data/: berlin-live.json  leningrad-rename.json  playground-scenarios.json  ulan-ude.json
docs/diagrams/: README.md  c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/specs/: README.md  agent.md  memory.md  observability.md  retriever.md  serving.md  tools.md
src/city_explorer/: __init__.py  city_resolver.py  cli.py  config.py  enrichment.py  exporter.py  geo.py  memory.py  models.py  observability.py  orchestrator.py  ranker.py  retriever.py  router.py  safety.py
tests/: test_city_resolver.py  test_orchestrator_categories.py  test_router_transport.py  test_smoke.py  test_web_backend.py
web/: __init__.py
web/backend/: __init__.py  server.py
web/frontend/: app.js  index.html  styles.css
