[project]
name = "city-explorer-agent"
version = "0.1.0"
description = "PoC agent system for building city walk routes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
city-explorer = "city_explorer.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "-q"
